--- a/src/main/resources/templates/listadoConsolas.html
+++ b/src/main/resources/templates/listadoConsolas.html
@@ -91,15 +91,16 @@
                     <div class="card text-center">
                         <img th:src="${consola.imagenUrl}" class="card-img-top rounded" alt="...">
                         <div class="card-body">
-                            <h5 th:text="${consola.nombre} +' $'+${consola.precio}" class="card-title"></h5>
+                            <p class="text-left" ><span th:text="'$'+${consola.precio}" class="badge badge-pill badge-info"></span></p>
+                            <h5 th:text="${consola.nombre}" class="card-title"></h5>
                             <p th:text="${consola.descripcion}" class="card-text"></p>
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                            <button type="button" class="btn btn-primary" data-toggle="modal" th:data-target="'#modal-consolas-' + ${consola.id}">
                                 Ver detalles
                             </button>
                         </div>
                     </div>
 
-                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade" th:id="'modal-consolas-' + ${consola.id}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -108,7 +109,7 @@
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
-                                <div th:text="${consola.precio}" class="modal-body">
+                                <div th:text="${consola.descripcion}" class="modal-body">
                                     ...
                                 </div>
                                 <div class="modal-footer">
